drm/amdgpu: Fix function header names in amdgpu_connectors.c (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12116,6 +12116,7 @@
 	patches.kernel.org/6.12.58-557-extcon-adc-jack-Cleanup-wakeup-source-only-if.patch
 	patches.kernel.org/6.12.58-558-ACPI-SPCR-Check-for-table-version-when-using-.patch
 	patches.kernel.org/6.12.58-559-drm-amdgpu-Fix-unintended-error-log-in-VCN5_0.patch
+	patches.kernel.org/6.12.58-560-drm-amdgpu-Fix-function-header-names-in-amdgp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
