--- a/series.conf
+++ b/series.conf
@@ -11724,6 +11724,7 @@
 	patches.kernel.org/6.12.58-165-mfd-madera-Work-around-false-positive-Wininit.patch
 	patches.kernel.org/6.12.58-166-mfd-da9063-Split-chip-variant-reading-in-two-.patch
 	patches.kernel.org/6.12.58-167-mfd-core-Increment-of_node-s-refcount-before-.patch
+	patches.kernel.org/6.12.58-168-mfd-intel-lpss-Add-Intel-Wildcat-Lake-LPSS-PC.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
