pinctrl: keembay: release allocated memory in detach path (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11674,6 +11674,7 @@
 	patches.kernel.org/6.12.58-115-hwmon-k10temp-Add-device-ID-for-Strix-Halo.patch
 	patches.kernel.org/6.12.58-116-hwmon-lenovo-ec-sensors-Update-P8-supprt.patch
 	patches.kernel.org/6.12.58-117-hwmon-sbtsi_temp-AMD-CPU-extended-temperature.patch
+	patches.kernel.org/6.12.58-118-pinctrl-keembay-release-allocated-memory-in-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
