smb: client: fix potential UAF in smb2_close_cached_fid() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12104,6 +12104,7 @@
 	patches.kernel.org/6.12.58-545-rtc-rx8025-fix-incorrect-register-reference.patch
 	patches.kernel.org/6.12.58-546-x86-microcode-AMD-Add-more-known-models-to-en.patch
 	patches.kernel.org/6.12.58-547-smb-client-validate-change-notify-buffer-befo.patch
+	patches.kernel.org/6.12.58-548-smb-client-fix-potential-UAF-in-smb2_close_ca.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
