selftests: drv-net: rss_ctx: fix the queue count check (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11814,6 +11814,7 @@
 	patches.kernel.org/6.12.58-255-drm-amd-display-Support-HW-cursor-180-rot-for.patch
 	patches.kernel.org/6.12.58-256-drm-amdkfd-Tie-UNMAP_LATENCY-to-queue_preempt.patch
 	patches.kernel.org/6.12.58-257-platform-x86-intel-uncore-freq-Fix-warning-in.patch
+	patches.kernel.org/6.12.58-258-selftests-drv-net-rss_ctx-fix-the-queue-count.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
