Bluetooth: btusb: Add new VID/PID 13d3/3633 for MT7922 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11991,6 +11991,7 @@
 	patches.kernel.org/6.12.58-432-net-macb-avoid-dealing-with-endianness-in-mac.patch
 	patches.kernel.org/6.12.58-433-Bluetooth-btusb-Check-for-unexpected-bytes-wh.patch
 	patches.kernel.org/6.12.58-434-Bluetooth-SCO-Fix-UAF-on-sco_conn_free.patch
+	patches.kernel.org/6.12.58-435-Bluetooth-btusb-Add-new-VID-PID-13d3-3633-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
