--- a/series.conf
+++ b/series.conf
@@ -11813,6 +11813,7 @@
 	patches.kernel.org/6.12.58-254-drm-amdkfd-fix-vram-allocation-failure-for-a-.patch
 	patches.kernel.org/6.12.58-255-drm-amd-display-Support-HW-cursor-180-rot-for.patch
 	patches.kernel.org/6.12.58-256-drm-amdkfd-Tie-UNMAP_LATENCY-to-queue_preempt.patch
+	patches.kernel.org/6.12.58-257-platform-x86-intel-uncore-freq-Fix-warning-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
