--- a/series.conf
+++ b/series.conf
@@ -11731,6 +11731,7 @@
 	patches.kernel.org/6.12.58-172-drm-amdgpu-Check-vcn-sram-load-return-value.patch
 	patches.kernel.org/6.12.58-173-drm-amd-display-Move-setup_stream_attribute.patch
 	patches.kernel.org/6.12.58-174-drm-amd-display-Increase-AUX-Intra-Hop-Done-M.patch
+	patches.kernel.org/6.12.58-175-drm-xe-guc-Add-more-GuC-load-error-status-cod.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
