--- a/series.conf
+++ b/series.conf
@@ -12095,6 +12095,7 @@
 	patches.kernel.org/6.12.58-536-lan966x-Fix-sleeping-in-atomic-context.patch
 	patches.kernel.org/6.12.58-537-net-bridge-fix-use-after-free-due-to-MST-port.patch
 	patches.kernel.org/6.12.58-538-net-bridge-fix-MST-static-key-usage.patch
+	patches.kernel.org/6.12.58-539-tracing-Fix-memory-leaks-in-create_field_var.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
