--- a/series.conf
+++ b/series.conf
@@ -11589,6 +11589,7 @@
 	patches.kernel.org/6.12.58-030-bpf-Sync-pending-IRQ-work-before-freeing-ring.patch
 	patches.kernel.org/6.12.58-031-scsi-ufs-core-Initialize-value-of-an-attribut.patch
 	patches.kernel.org/6.12.58-032-bpf-Find-eligible-subprogs-for-private-stack-.patch
+	patches.kernel.org/6.12.58-033-bpf-x86-Avoid-repeated-usage-of-bpf_prog-aux-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
