--- a/series.conf
+++ b/series.conf
@@ -12043,6 +12043,7 @@
 	patches.kernel.org/6.12.58-484-rtc-pcf2127-fix-watchdog-interrupt-mask-on-pc.patch
 	patches.kernel.org/6.12.58-485-net-wwan-t7xx-add-support-for-HP-DRMR-H01.patch
 	patches.kernel.org/6.12.58-486-kbuild-uapi-Strip-comments-before-size-type-c.patch
+	patches.kernel.org/6.12.58-487-ASoC-meson-aiu-encoder-i2s-fix-bit-clock-pola.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
