--- a/series.conf
+++ b/series.conf
@@ -11579,6 +11579,7 @@
 	patches.kernel.org/6.12.58-020-wifi-ath11k-Add-missing-platform-IDs-for-quir.patch
 	patches.kernel.org/6.12.58-021-wifi-ath12k-free-skb-during-idr-cleanup-callb.patch
 	patches.kernel.org/6.12.58-022-wifi-ath11k-add-support-for-MU-EDCA.patch
+	patches.kernel.org/6.12.58-023-wifi-ath11k-avoid-bit-operation-on-key-flags.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
