NTB: epf: Allow arbitrary BAR mapping (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12029,6 +12029,7 @@
 	patches.kernel.org/6.12.58-470-clk-ti-am33xx-keep-WKUP_DEBUGSS_CLKCTRL-enabl.patch
 	patches.kernel.org/6.12.58-471-clk-scmi-Add-duty-cycle-ops-only-when-duty-cy.patch
 	patches.kernel.org/6.12.58-472-clk-clocking-wizard-Fix-output-clock-register.patch
+	patches.kernel.org/6.12.58-473-NTB-epf-Allow-arbitrary-BAR-mapping.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
