--- a/series.conf
+++ b/series.conf
@@ -11715,6 +11715,7 @@
 	patches.kernel.org/6.12.58-156-hwmon-asus-ec-sensors-increase-timeout-for-lo.patch
 	patches.kernel.org/6.12.58-157-hwmon-dell-smm-Remove-Dell-Precision-490-cust.patch
 	patches.kernel.org/6.12.58-158-tools-cpupower-Fix-incorrect-size-in-cpuidle_.patch
+	patches.kernel.org/6.12.58-159-selftests-bpf-Fix-flaky-bpf_cookie-selftest.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
