IB/ipoib: Ignore L3 master device (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11942,6 +11942,7 @@
 	patches.kernel.org/6.12.58-383-usb-xhci-pci-add-support-for-hosts-with-zero-.patch
 	patches.kernel.org/6.12.58-384-ipv6-np-rxpmtu-race-annotation.patch
 	patches.kernel.org/6.12.58-385-RDMA-irdma-Update-Kconfig.patch
+	patches.kernel.org/6.12.58-386-IB-ipoib-Ignore-L3-master-device.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
