drm/xe: Do not wake device during a GT reset (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11621,6 +11621,7 @@
 	patches.kernel.org/6.12.58-062-perf-x86-intel-Fix-KASAN-global-out-of-bounds.patch
 	patches.kernel.org/6.12.58-063-regmap-slimbus-fix-bus_context-pointer-in-reg.patch
 	patches.kernel.org/6.12.58-064-s390-mm-Fix-memory-leak-in-add_marker-when-kv.patch
+	patches.kernel.org/6.12.58-065-drm-xe-Do-not-wake-device-during-a-GT-reset.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
