--- a/series.conf
+++ b/series.conf
@@ -11793,6 +11793,7 @@
 	patches.kernel.org/6.12.58-234-net-Call-trace_sock_exceed_buf_limit-for-memc.patch
 	patches.kernel.org/6.12.58-235-f2fs-fix-to-detect-potential-corrupted-nid-in.patch
 	patches.kernel.org/6.12.58-236-PCI-P2PDMA-Fix-incorrect-pointer-usage-in-dev.patch
+	patches.kernel.org/6.12.58-237-bnxt_en-Add-Hyper-V-VF-ID.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
