virtio-net: fix received length check in big packets (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12107,6 +12107,7 @@
 	patches.kernel.org/6.12.58-548-smb-client-fix-potential-UAF-in-smb2_close_ca.patch
 	patches.kernel.org/6.12.58-549-drm-amdgpu-smu-Handle-S0ix-for-vangogh.patch
 	patches.kernel.org/6.12.58-550-drm-amd-display-Fix-NULL-deref-in-debugfs-odm.patch
+	patches.kernel.org/6.12.58-551-virtio-net-fix-received-length-check-in-big-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
