drm/amd/pm: Use cached metrics data on aldebaran (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11738,6 +11738,7 @@
 	patches.kernel.org/6.12.58-179-drm-amdgpu-Skip-poison-aca-bank-from-UE-chann.patch
 	patches.kernel.org/6.12.58-180-drm-amd-display-add-more-cyan-skillfish-devic.patch
 	patches.kernel.org/6.12.58-181-drm-amd-display-update-dpp-disp-clock-from-sm.patch
+	patches.kernel.org/6.12.58-182-drm-amd-pm-Use-cached-metrics-data-on-aldebar.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
