--- a/series.conf
+++ b/series.conf
@@ -11874,6 +11874,7 @@
 	patches.kernel.org/6.12.58-315-media-ov08x40-Fix-the-horizontal-flip-control.patch
 	patches.kernel.org/6.12.58-316-media-i2c-og01a1b-Specify-monochrome-media-bu.patch
 	patches.kernel.org/6.12.58-317-f2fs-fix-wrong-layout-information-on-16KB-pag.patch
+	patches.kernel.org/6.12.58-318-selftests-mptcp-join-allow-more-time-to-send-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
