scsi: lpfc: Ensure PLOGI_ACC is sent prior to PRLI in Point to Point topology (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11932,6 +11932,7 @@
 	patches.kernel.org/6.12.58-373-scsi-lpfc-Check-return-status-of-lpfc_reset_f.patch
 	patches.kernel.org/6.12.58-374-scsi-lpfc-Remove-ndlp-kref-decrement-clause-f.patch
 	patches.kernel.org/6.12.58-375-scsi-lpfc-Define-size-of-debugfs-entry-for-xr.patch
+	patches.kernel.org/6.12.58-376-scsi-lpfc-Ensure-PLOGI_ACC-is-sent-prior-to-P.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
