--- a/series.conf
+++ b/series.conf
@@ -11860,6 +11860,7 @@
 	patches.kernel.org/6.12.58-301-crypto-ccp-Skip-SEV-and-SNP-INIT-for-kdump-bo.patch
 	patches.kernel.org/6.12.58-302-iommu-apple-dart-Clear-stream-error-indicator.patch
 	patches.kernel.org/6.12.58-303-drm-amd-add-more-cyan-skillfish-PCI-ids.patch
+	patches.kernel.org/6.12.58-304-drm-amdgpu-don-t-enable-SMU-on-cyan-skillfish.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
