Bluetooth: hci_core: Fix tracking of periodic advertisement (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11603,6 +11603,7 @@
 	patches.kernel.org/6.12.58-044-Bluetooth-btmtksdio-Add-pmctrl-handling-for-B.patch
 	patches.kernel.org/6.12.58-045-Bluetooth-HCI-Fix-tracking-of-advertisement-s.patch
 	patches.kernel.org/6.12.58-046-Bluetooth-ISO-Fix-another-instance-of-dst_typ.patch
+	patches.kernel.org/6.12.58-047-Bluetooth-hci_core-Fix-tracking-of-periodic-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
