--- a/series.conf
+++ b/series.conf
@@ -11816,6 +11816,7 @@
 	patches.kernel.org/6.12.58-257-platform-x86-intel-uncore-freq-Fix-warning-in.patch
 	patches.kernel.org/6.12.58-258-selftests-drv-net-rss_ctx-fix-the-queue-count.patch
 	patches.kernel.org/6.12.58-259-media-fix-uninitialized-symbol-warnings.patch
+	patches.kernel.org/6.12.58-260-media-pci-mgb4-Fix-timings-comparison-in-VIDI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
