--- a/series.conf
+++ b/series.conf
@@ -11635,6 +11635,7 @@
 	patches.kernel.org/6.12.58-076-cpuidle-governors-menu-Rearrange-main-loop-in.patch
 	patches.kernel.org/6.12.58-077-cpuidle-governors-menu-Select-polling-state-i.patch
 	patches.kernel.org/6.12.58-078-mfd-kempld-Switch-back-to-earlier-init-behavi.patch
+	patches.kernel.org/6.12.58-079-x86-CPU-AMD-Add-RDSEED-fix-for-Zen5.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
