--- a/series.conf
+++ b/series.conf
@@ -11714,6 +11714,7 @@
 	patches.kernel.org/6.12.58-155-uprobe-Do-not-emulate-sstep-original-instruct.patch
 	patches.kernel.org/6.12.58-156-hwmon-asus-ec-sensors-increase-timeout-for-lo.patch
 	patches.kernel.org/6.12.58-157-hwmon-dell-smm-Remove-Dell-Precision-490-cust.patch
+	patches.kernel.org/6.12.58-158-tools-cpupower-Fix-incorrect-size-in-cpuidle_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
