--- a/series.conf
+++ b/series.conf
@@ -11574,6 +11574,7 @@
 	patches.kernel.org/6.12.58-015-ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
 	patches.kernel.org/6.12.58-016-s390-pci-Restore-IRQ-unconditionally-for-the-.patch
 	patches.kernel.org/6.12.58-017-smb-client-fix-potential-cfid-UAF-in-smb2_que.patch
+	patches.kernel.org/6.12.58-018-x86-fpu-Ensure-XFD-state-on-signal-delivery.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
