--- a/series.conf
+++ b/series.conf
@@ -11743,6 +11743,7 @@
 	patches.kernel.org/6.12.58-184-drm-amdgpu-jpeg-Hold-pg_lock-before-jpeg-powe.patch
 	patches.kernel.org/6.12.58-185-drm-nouveau-replace-snprintf-with-scnprintf-i.patch
 	patches.kernel.org/6.12.58-186-ASoC-mediatek-Use-SND_JACK_AVOUT-for-HDMI-DP-.patch
+	patches.kernel.org/6.12.58-187-drm-amd-display-Reset-apply_eamless_boot_opti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
