--- a/series.conf
+++ b/series.conf
@@ -11949,6 +11949,7 @@
 	patches.kernel.org/6.12.58-390-ASoC-qcom-sc8280xp-explicitly-set-S16LE-forma.patch
 	patches.kernel.org/6.12.58-391-net-phy-clear-link-parameters-on-admin-link-d.patch
 	patches.kernel.org/6.12.58-392-net-ethernet-microchip-sparx5-make-it-selecta.patch
+	patches.kernel.org/6.12.58-393-bus-mhi-core-Improve-mhi_sync_power_up-handli.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
