--- a/series.conf
+++ b/series.conf
@@ -11961,6 +11961,7 @@
 	patches.kernel.org/6.12.58-402-vfio-return-ENOTTY-for-unsupported-device-fea.patch
 	patches.kernel.org/6.12.58-403-crypto-hisilicon-qm-invalidate-queues-in-use.patch
 	patches.kernel.org/6.12.58-404-crypto-hisilicon-qm-clear-all-VF-configuratio.patch
+	patches.kernel.org/6.12.58-405-PCI-PM-Skip-resuming-to-D0-if-device-is-disco.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
