--- a/series.conf
+++ b/series.conf
@@ -11859,6 +11859,7 @@
 	patches.kernel.org/6.12.58-300-iommu-amd-Skip-enabling-command-event-buffers.patch
 	patches.kernel.org/6.12.58-301-crypto-ccp-Skip-SEV-and-SNP-INIT-for-kdump-bo.patch
 	patches.kernel.org/6.12.58-302-iommu-apple-dart-Clear-stream-error-indicator.patch
+	patches.kernel.org/6.12.58-303-drm-amd-add-more-cyan-skillfish-PCI-ids.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
