--- a/series.conf
+++ b/series.conf
@@ -12083,6 +12083,7 @@
 	patches.kernel.org/6.12.58-524-net-ionic-map-SKB-after-pseudo-header-checksu.patch
 	patches.kernel.org/6.12.58-525-net-usb-qmi_wwan-initialize-MAC-header-offset.patch
 	patches.kernel.org/6.12.58-526-bnxt_en-Fix-a-possible-memory-leak-in-bnxt_pt.patch
+	patches.kernel.org/6.12.58-527-bnxt_en-Add-mem_valid-bit-to-struct-bnxt_ctx_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
