Fix access to video_is_primary_device() when compiled without CONFIG_VIDEO (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11884,6 +11884,7 @@
 	patches.kernel.org/6.12.58-325-ntfs3-pretend-Extend-records-as-regular-files.patch
 	patches.kernel.org/6.12.58-326-wifi-mac80211-Fix-HE-capabilities-element-che.patch
 	patches.kernel.org/6.12.58-327-phy-cadence-cdns-dphy-Enable-lower-resolution.patch
+	patches.kernel.org/6.12.58-328-Fix-access-to-video_is_primary_device-when-co.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
