mfd: kempld: Switch back to earlier ->init() behavior (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11634,6 +11634,7 @@
 	patches.kernel.org/6.12.58-075-sched_ext-Mark-scx_bpf_dsq_move_set_-slice-vt.patch
 	patches.kernel.org/6.12.58-076-cpuidle-governors-menu-Rearrange-main-loop-in.patch
 	patches.kernel.org/6.12.58-077-cpuidle-governors-menu-Select-polling-state-i.patch
+	patches.kernel.org/6.12.58-078-mfd-kempld-Switch-back-to-earlier-init-behavi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
