mptcp: drop bogus optimization in __mptcp_check_push() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11569,6 +11569,7 @@
 	patches.kernel.org/6.12.58-010-wifi-brcmfmac-fix-crash-while-sending-Action-.patch
 	patches.kernel.org/6.12.58-011-fbdev-pvr2fb-Fix-leftover-reference-to-ONCHIP.patch
 	patches.kernel.org/6.12.58-012-fbdev-valkyriefb-Fix-reference-count-leak-in-.patch
+	patches.kernel.org/6.12.58-013-mptcp-drop-bogus-optimization-in-__mptcp_chec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
