rds: Fix endianness annotation for RDS_MPATH_HASH (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11797,6 +11797,7 @@
 	patches.kernel.org/6.12.58-238-tty-serial-Modify-the-use-of-dev_err_probe.patch
 	patches.kernel.org/6.12.58-239-ALSA-usb-audio-Add-validation-of-UAC2-UAC3-ef.patch
 	patches.kernel.org/6.12.58-240-idpf-do-not-linearize-big-TSO-packets.patch
+	patches.kernel.org/6.12.58-241-rds-Fix-endianness-annotation-for-RDS_MPATH_H.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
