firmware: qcom: tzmem: disable sc7180 platform (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11685,6 +11685,7 @@
 	patches.kernel.org/6.12.58-126-ARM-tegra-p880-set-correct-touchscreen-clippi.patch
 	patches.kernel.org/6.12.58-127-ARM-tegra-transformer-20-add-missing-magnetom.patch
 	patches.kernel.org/6.12.58-128-ARM-tegra-transformer-20-fix-audio-codec-inte.patch
+	patches.kernel.org/6.12.58-129-firmware-qcom-tzmem-disable-sc7180-platform.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
