--- a/series.conf
+++ b/series.conf
@@ -11928,6 +11928,7 @@
 	patches.kernel.org/6.12.58-369-selftests-Makefile-include-INSTALL_DEP_TARGET.patch
 	patches.kernel.org/6.12.58-370-scsi-ufs-core-Disable-timestamp-functionality.patch
 	patches.kernel.org/6.12.58-371-scsi-lpfc-Clean-up-allocated-queues-when-queu.patch
+	patches.kernel.org/6.12.58-372-scsi-lpfc-Decrement-ndlp-kref-after-FDISC-ret.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
