selftests: netdevsim: Fix ethtool-coalesce.sh fail by installing ethtool-common.sh (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12068,6 +12068,7 @@
 	patches.kernel.org/6.12.58-509-net-dsa-tag_brcm-legacy-fix-untagged-rx-on-un.patch
 	patches.kernel.org/6.12.58-510-selftests-net-fix-out-of-order-delivery-of-FI.patch
 	patches.kernel.org/6.12.58-511-selftests-net-use-destination-options-instead.patch
+	patches.kernel.org/6.12.58-512-selftests-netdevsim-Fix-ethtool-coalesce.sh-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
