char: misc: restrict the dynamic range to exclude reserved minors (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12005,6 +12005,7 @@
 	patches.kernel.org/6.12.58-446-smb-client-transport-avoid-reconnects-trigger.patch
 	patches.kernel.org/6.12.58-447-ima-don-t-clear-IMA_DIGSIG-flag-when-setting-.patch
 	patches.kernel.org/6.12.58-448-usb-xhci-pci-Fix-USB2-only-root-hub-registrat.patch
+	patches.kernel.org/6.12.58-449-char-misc-restrict-the-dynamic-range-to-exclu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
