--- a/series.conf
+++ b/series.conf
@@ -11970,6 +11970,7 @@
 	patches.kernel.org/6.12.58-411-drm-amd-display-Init-dispclk-from-bootup-cloc.patch
 	patches.kernel.org/6.12.58-412-drm-amd-display-Fix-for-test-crash-due-to-pow.patch
 	patches.kernel.org/6.12.58-413-drm-amd-display-change-dc-stream-color-settin.patch
+	patches.kernel.org/6.12.58-414-NFSv4-handle-ERR_GRACE-on-delegation-recalls.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
