--- a/series.conf
+++ b/series.conf
@@ -11828,6 +11828,7 @@
 	patches.kernel.org/6.12.58-269-mips-lantiq-xway-sysctrl-rename-stp-clock.patch
 	patches.kernel.org/6.12.58-270-mips-lantiq-danube-rename-stp-node-on-EASY507.patch
 	patches.kernel.org/6.12.58-271-inet_diag-annotate-data-races-in-inet_diag_bc.patch
+	patches.kernel.org/6.12.58-272-microchip-lan865x-add-ndo_eth_ioctl-handler-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
