--- a/series.conf
+++ b/series.conf
@@ -11706,6 +11706,7 @@
 	patches.kernel.org/6.12.58-147-ACPI-SPCR-Support-Precise-Baud-Rate-field.patch
 	patches.kernel.org/6.12.58-148-clocksource-drivers-vf-pit-Replace-raw_readl-.patch
 	patches.kernel.org/6.12.58-149-clocksource-drivers-timer-rtl-otto-Work-aroun.patch
+	patches.kernel.org/6.12.58-150-clocksource-drivers-timer-rtl-otto-Do-not-int.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
