drm/etnaviv: fix flush sequence logic (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11604,6 +11604,7 @@
 	patches.kernel.org/6.12.58-045-Bluetooth-HCI-Fix-tracking-of-advertisement-s.patch
 	patches.kernel.org/6.12.58-046-Bluetooth-ISO-Fix-another-instance-of-dst_typ.patch
 	patches.kernel.org/6.12.58-047-Bluetooth-hci_core-Fix-tracking-of-periodic-a.patch
+	patches.kernel.org/6.12.58-048-drm-etnaviv-fix-flush-sequence-logic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
