--- a/series.conf
+++ b/series.conf
@@ -11693,6 +11693,7 @@
 	patches.kernel.org/6.12.58-134-nvmet-fc-avoid-scheduling-association-deletio.patch
 	patches.kernel.org/6.12.58-135-nvme-fc-use-lock-accessing-port_state-and-rpo.patch
 	patches.kernel.org/6.12.58-136-bpf-Do-not-limit-bpf_cgroup_from_id-to-curren.patch
+	patches.kernel.org/6.12.58-137-i3c-mipi-i3c-hci-pci-Add-support-for-Intel-Wi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
