--- a/series.conf
+++ b/series.conf
@@ -11773,6 +11773,7 @@
 	patches.kernel.org/6.12.58-214-scsi-ufs-host-mediatek-Change-reset-sequence-.patch
 	patches.kernel.org/6.12.58-215-scsi-ufs-host-mediatek-Fix-invalid-access-in-.patch
 	patches.kernel.org/6.12.58-216-net-ipv6-fix-field-spanning-memcpy-warning-in.patch
+	patches.kernel.org/6.12.58-217-media-imon-make-send_packet-more-robust.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
