mfd: da9063: Split chip variant reading in two bus transactions (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11722,6 +11722,7 @@
 	patches.kernel.org/6.12.58-163-mfd-stmpe-Remove-IRQ-domain-upon-removal.patch
 	patches.kernel.org/6.12.58-164-mfd-stmpe-i2c-Add-missing-MODULE_LICENSE.patch
 	patches.kernel.org/6.12.58-165-mfd-madera-Work-around-false-positive-Wininit.patch
+	patches.kernel.org/6.12.58-166-mfd-da9063-Split-chip-variant-reading-in-two-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
