--- a/series.conf
+++ b/series.conf
@@ -11713,6 +11713,7 @@
 	patches.kernel.org/6.12.58-154-nvme-Use-non-zero-KATO-for-persistent-discove.patch
 	patches.kernel.org/6.12.58-155-uprobe-Do-not-emulate-sstep-original-instruct.patch
 	patches.kernel.org/6.12.58-156-hwmon-asus-ec-sensors-increase-timeout-for-lo.patch
+	patches.kernel.org/6.12.58-157-hwmon-dell-smm-Remove-Dell-Precision-490-cust.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
