s390/pci: Avoid deadlock between PCI error recovery and mlx5 crdump (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11640,6 +11640,7 @@
 	patches.kernel.org/6.12.58-081-drm-sched-Optimise-drm_sched_entity_push_job.patch
 	patches.kernel.org/6.12.58-082-drm-sched-Re-group-and-rename-the-entity-run-.patch
 	patches.kernel.org/6.12.58-083-drm-sched-Fix-race-in-drm_sched_entity_select.patch
+	patches.kernel.org/6.12.58-084-s390-pci-Avoid-deadlock-between-PCI-error-rec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
