--- a/series.conf
+++ b/series.conf
@@ -11790,6 +11790,7 @@
 	patches.kernel.org/6.12.58-231-char-misc-Does-not-request-module-for-miscdev.patch
 	patches.kernel.org/6.12.58-232-net-When-removing-nexthops-don-t-call-synchro.patch
 	patches.kernel.org/6.12.58-233-net-stmmac-Correctly-handle-Rx-checksum-offlo.patch
+	patches.kernel.org/6.12.58-234-net-Call-trace_sock_exceed_buf_limit-for-memc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
