--- a/series.conf
+++ b/series.conf
@@ -12052,6 +12052,7 @@
 	patches.kernel.org/6.12.58-493-x86-use-cmov-for-user-address-masking.patch
 	patches.kernel.org/6.12.58-494-x86-runtime-const-Add-the-RUNTIME_CONST_PTR-a.patch
 	patches.kernel.org/6.12.58-495-x86-uaccess-don-t-use-runtime-const-rewriting.patch
+	patches.kernel.org/6.12.58-496-ALSA-hda-realtek-Audio-disappears-on-HP-15-fc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
