--- a/blacklist.conf
+++ b/blacklist.conf
@@ -608,3 +608,4 @@ b6f58a3f4aa8dba424356c7a69388a81f4459300 # Breaks the kABI for a minor code impr
 bd2703b42decebdcddf76e277ba76b4c4a142d73 # code change without security impact, requires kabi change.
 7c71a0af81ba72de9b2c501065e4e718aba9a271 # Intrusive io_uring perf optimization for buffer bundle.
 b53e523261bf058ea4a518b482222e7a277b186b # Intrusive io_uring change for small benefit without further patches
+4ec703ec0c384a2199808c4eb2e9037236285a8d # Issue not-present due to missing backport that partially introduced it.
