--- a/series.conf
+++ b/series.conf
@@ -10538,6 +10538,7 @@
 	patches.suse/io_uring-make-fallocate-be-hashed-work.patch
 	patches.suse/io_uring-rsrc-fix-folio-unpinning.patch
 	patches.suse/io_uring-rsrc-don-t-rely-on-user-vaddr-alignment.patch
+	patches.suse/io_uring-net-mark-iov-as-dynamically-allocated-even-.patch
 	patches.suse/ublk-sanity-check-add_dev-input-for-underflow.patch
 	patches.suse/Revert-PCI-ACPI-Fix-allocated-memory-release-on-erro.patch
 	patches.suse/drm-amd-Adjust-output-for-discovery-error-handling.patch
