blacklist.conf: update for v6.12.58
118800b0797a drm/amd/display: Reject modes with too high pixel clock on DCE6-10
f1fdffe0afea x86/CPU/AMD: Add missing terminator for zen5_rdseed_microcode

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -30,3 +30,5 @@ cee686775f9cd4eae31f3c1f7ec24b2048082667 # conflicts
 56098a4505e7ba54c7942c82eeca8de522c8c2ee # documentation
 aa5fc4362fac9351557eb27c745579159a2e4520 # build failure
 32f072d9eaf9c31c2b0527a4a3370570a731e3cc # just formating
+118800b0797a046adaa2a8e9dee9b971b78802a7 # conflicts
+f1fdffe0afea02ba783acfe815b6a60e7180df40 # conflicts
