wifi: mt76: mt7996: support writing MAC TXD for AddBA Request (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1925,6 +1925,7 @@
 	patches.kernel.org/6.17.8-537-wifi-mt76-mt7996-Fix-mt7996_reverse_frag0_hdr_.patch
 	patches.kernel.org/6.17.8-538-wifi-mt76-mt7996-Set-def_wcid-pointer-in-mt799.patch
 	patches.kernel.org/6.17.8-539-wifi-mt76-mt7996-Temporarily-disable-EPCS.patch
+	patches.kernel.org/6.17.8-540-wifi-mt76-mt7996-support-writing-MAC-TXD-for-A.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
