--- a/series.conf
+++ b/series.conf
@@ -1432,6 +1432,7 @@
 	patches.kernel.org/6.17.8-044-scsi-ufs-core-Initialize-value-of-an-attribute.patch
 	patches.kernel.org/6.17.8-045-scsi-core-Fix-the-unit-attention-counter-imple.patch
 	patches.kernel.org/6.17.8-046-bpf-Do-not-audit-capability-check-in-do_jit.patch
+	patches.kernel.org/6.17.8-047-nvmet-auth-update-sc_c-in-host-response.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
