--- a/series.conf
+++ b/series.conf
@@ -1695,6 +1695,7 @@
 	patches.kernel.org/6.17.8-307-gpu-nova-core-register-allow-fields-named-offs.patch
 	patches.kernel.org/6.17.8-308-net-ipv6-fix-field-spanning-memcpy-warning-in-.patch
 	patches.kernel.org/6.17.8-309-media-imon-make-send_packet-more-robust.patch
+	patches.kernel.org/6.17.8-310-drm-panthor-Serialize-GPU-cache-flush-operatio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
