--- a/series.conf
+++ b/series.conf
@@ -1803,6 +1803,7 @@
 	patches.kernel.org/6.17.8-415-dmaengine-dw-edma-Set-status-for-callback_resu.patch
 	patches.kernel.org/6.17.8-416-netfilter-nf_tables-all-transaction-allocation.patch
 	patches.kernel.org/6.17.8-417-drm-msm-dsi-phy-Toggle-back-buffer-resync-afte.patch
+	patches.kernel.org/6.17.8-418-drm-msm-dsi-phy_7nm-Fix-missing-initial-VCO-ra.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
