scsi: ufs: host: mediatek: Fix auto-hibern8 timer configuration (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1687,6 +1687,7 @@
 	patches.kernel.org/6.17.8-299-bridge-Redirect-to-backup-port-when-port-is-ad.patch
 	patches.kernel.org/6.17.8-300-selftests-drv-net-wait-for-carrier.patch
 	patches.kernel.org/6.17.8-301-net-phy-mscc-report-and-configure-in-band-auto.patch
+	patches.kernel.org/6.17.8-302-scsi-ufs-host-mediatek-Fix-auto-hibern8-timer-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
