--- a/series.conf
+++ b/series.conf
@@ -1950,6 +1950,7 @@
 	patches.kernel.org/6.17.8-562-scsi-ufs-ufs-qcom-Disable-lane-clocks-during-p.patch
 	patches.kernel.org/6.17.8-563-HID-i2c-hid-Resolve-touchpad-issues-on-Dell-sy.patch
 	patches.kernel.org/6.17.8-564-hinic3-Queue-pair-endianness-improvements.patch
+	patches.kernel.org/6.17.8-565-hinic3-Fix-missing-napi-dev-in-netif_queue_set.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
