wifi: cfg80211: update the time stamps in hidden ssid (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1885,6 +1885,7 @@
 	patches.kernel.org/6.17.8-497-scsi-ufs-host-mediatek-Disable-auto-hibern8-du.patch
 	patches.kernel.org/6.17.8-498-scsi-ufs-host-mediatek-Fix-adapt-issue-after-P.patch
 	patches.kernel.org/6.17.8-499-ntfs3-pretend-Extend-records-as-regular-files.patch
+	patches.kernel.org/6.17.8-500-wifi-cfg80211-update-the-time-stamps-in-hidden.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
