--- a/series.conf
+++ b/series.conf
@@ -1849,6 +1849,7 @@
 	patches.kernel.org/6.17.8-461-net-dsa-felix-support-phy-mode-10g-qxgmii.patch
 	patches.kernel.org/6.17.8-462-usb-gadget-f_hid-Fix-zero-length-packet-transf.patch
 	patches.kernel.org/6.17.8-463-usb-cdns3-gadget-Use-after-free-during-failed-.patch
+	patches.kernel.org/6.17.8-464-serial-qcom-geni-Add-DFS-clock-mode-support-to.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
