RDMA/bnxt_re: Fix a potential memory leak in destroy_gsi_sqp (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2067,6 +2067,7 @@
 	patches.kernel.org/6.17.8-679-usb-xhci-pci-Fix-USB2-only-root-hub-registrati.patch
 	patches.kernel.org/6.17.8-680-drm-amd-display-Add-fallback-path-for-YCBCR422.patch
 	patches.kernel.org/6.17.8-681-ACPICA-Update-dsmethod.c-to-get-rid-of-unused-.patch
+	patches.kernel.org/6.17.8-682-RDMA-bnxt_re-Fix-a-potential-memory-leak-in-de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
