--- a/series.conf
+++ b/series.conf
@@ -2127,6 +2127,7 @@
 	patches.kernel.org/6.17.8-739-rust-kbuild-workaround-rustdoc-doctests-modifi.patch
 	patches.kernel.org/6.17.8-740-rust-kbuild-treat-build_error-and-rustdoc-as-k.patch
 	patches.kernel.org/6.17.8-741-btrfs-ensure-no-dirty-metadata-is-written-back.patch
+	patches.kernel.org/6.17.8-742-media-uvcvideo-Use-heuristic-to-find-stream-en.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
