--- a/series.conf
+++ b/series.conf
@@ -2235,6 +2235,7 @@
 	patches.kernel.org/6.17.8-847-drm-amd-display-Fix-black-screen-with-HDMI-out.patch
 	patches.kernel.org/6.17.8-848-selftests-drv-net-Reload-pkt-pointer-after-cal.patch
 	patches.kernel.org/6.17.8-849-dt-bindings-eeprom-at25-use-size-for-FRAMs-wit.patch
+	patches.kernel.org/6.17.8-850-Linux-6.17.8.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
