smb: client: fix potential UAF in smb2_close_cached_fid() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2201,6 +2201,7 @@
 	patches.kernel.org/6.17.8-813-x86-microcode-AMD-Add-more-known-models-to-ent.patch
 	patches.kernel.org/6.17.8-814-smb-client-validate-change-notify-buffer-befor.patch
 	patches.kernel.org/6.17.8-815-io_uring-fix-regbuf-vector-size-truncation.patch
+	patches.kernel.org/6.17.8-816-smb-client-fix-potential-UAF-in-smb2_close_cac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
