drm/msm: Fix GEM free for imported dma-bufs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1418,6 +1418,7 @@
 	patches.kernel.org/6.17.8-030-wifi-ath11k-Add-missing-platform-IDs-for-quirk.patch
 	patches.kernel.org/6.17.8-031-wifi-ath12k-free-skb-during-idr-cleanup-callba.patch
 	patches.kernel.org/6.17.8-032-wifi-ath11k-avoid-bit-operation-on-key-flags.patch
+	patches.kernel.org/6.17.8-033-drm-msm-Fix-GEM-free-for-imported-dma-bufs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
