selftests: drv-net: devmem: flip the direction of Tx tests (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1665,6 +1665,7 @@
 	patches.kernel.org/6.17.8-277-wifi-rtw89-add-dummy-C2H-handlers-for-BCN-rese.patch
 	patches.kernel.org/6.17.8-278-drm-amdkfd-return-ENOTTY-for-unsupported-IOCTL.patch
 	patches.kernel.org/6.17.8-279-selftests-drv-net-devmem-add-correct-the-IPv6-.patch
+	patches.kernel.org/6.17.8-280-selftests-drv-net-devmem-flip-the-direction-of.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
