--- a/series.conf
+++ b/series.conf
@@ -1831,6 +1831,7 @@
 	patches.kernel.org/6.17.8-443-smsc911x-add-second-read-of-EEPROM-mac-when-po.patch
 	patches.kernel.org/6.17.8-444-drm-gpusvm-fix-hmm_pfn_to_map_order-usage.patch
 	patches.kernel.org/6.17.8-445-drm-xe-improve-dma-resv-handling-for-backup-ob.patch
+	patches.kernel.org/6.17.8-446-iommu-amd-Add-support-to-remap-unmap-IOMMU-buf.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
