--- a/series.conf
+++ b/series.conf
@@ -1498,6 +1498,7 @@
 	patches.kernel.org/6.17.8-110-mptcp-leverage-skb-deferral-free.patch
 	patches.kernel.org/6.17.8-111-mptcp-fix-MSG_PEEK-stream-corruption.patch
 	patches.kernel.org/6.17.8-112-cpuidle-governors-menu-Rearrange-main-loop-in-.patch
+	patches.kernel.org/6.17.8-113-cpuidle-governors-menu-Select-polling-state-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
