--- a/series.conf
+++ b/series.conf
@@ -1872,6 +1872,7 @@
 	patches.kernel.org/6.17.8-484-media-i2c-og01a1b-Specify-monochrome-media-bus.patch
 	patches.kernel.org/6.17.8-485-media-qcom-camss-csiphy-3ph-Add-CSIPHY-2ph-DPH.patch
 	patches.kernel.org/6.17.8-486-drm-bridge-write-full-Audio-InfoFrame.patch
+	patches.kernel.org/6.17.8-487-drm-xe-guc-Always-add-CT-disable-action-during.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
