RDMA/hns: Fix recv CQ and QP cache affinity (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2072,6 +2072,7 @@
 	patches.kernel.org/6.17.8-684-RDMA-irdma-Remove-unused-struct-irdma_cq-field.patch
 	patches.kernel.org/6.17.8-685-RDMA-irdma-Set-irdma_cq-cq_num-field-during-CQ.patch
 	patches.kernel.org/6.17.8-686-RDMA-uverbs-Fix-umem-release-in-UVERBS_METHOD_.patch
+	patches.kernel.org/6.17.8-687-RDMA-hns-Fix-recv-CQ-and-QP-cache-affinity.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
