--- a/series.conf
+++ b/series.conf
@@ -1603,6 +1603,7 @@
 	patches.kernel.org/6.17.8-215-tools-power-x86_energy_perf_policy-Enhance-HWP.patch
 	patches.kernel.org/6.17.8-216-tools-power-x86_energy_perf_policy-Prefer-driv.patch
 	patches.kernel.org/6.17.8-217-mfd-simple-mfd-i2c-Add-compatible-strings-for-.patch
+	patches.kernel.org/6.17.8-218-mfd-stmpe-Remove-IRQ-domain-upon-removal.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
