--- a/series.conf
+++ b/series.conf
@@ -1773,6 +1773,7 @@
 	patches.kernel.org/6.17.8-385-selftests-drv-net-rss_ctx-fix-the-queue-count-.patch
 	patches.kernel.org/6.17.8-386-media-fix-uninitialized-symbol-warnings.patch
 	patches.kernel.org/6.17.8-387-media-pci-mgb4-Fix-timings-comparison-in-VIDIO.patch
+	patches.kernel.org/6.17.8-388-ASoC-SOF-ipc4-pcm-Add-fixup-for-channels.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
