--- a/series.conf
+++ b/series.conf
@@ -1478,6 +1478,7 @@
 	patches.kernel.org/6.17.8-090-dma-fence-Fix-safe-access-wrapper-to-call-time.patch
 	patches.kernel.org/6.17.8-091-kbuild-align-modinfo-section-for-Secureboot-Au.patch
 	patches.kernel.org/6.17.8-092-perf-x86-intel-Fix-KASAN-global-out-of-bounds-.patch
+	patches.kernel.org/6.17.8-093-regmap-slimbus-fix-bus_context-pointer-in-regm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
