--- a/series.conf
+++ b/series.conf
@@ -1922,6 +1922,7 @@
 	patches.kernel.org/6.17.8-534-net-cls_cgroup-Fix-task_get_classid-during-qdi.patch
 	patches.kernel.org/6.17.8-535-wifi-mt76-mt7921-Add-160MHz-beamformee-capabil.patch
 	patches.kernel.org/6.17.8-536-wifi-mt76-mt7925-add-pci-restore-for-hibernate.patch
+	patches.kernel.org/6.17.8-537-wifi-mt76-mt7996-Fix-mt7996_reverse_frag0_hdr_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
