net/mlx5e: SHAMPO, Fix skb size check for 64K pages (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2176,6 +2176,7 @@
 	patches.kernel.org/6.17.8-788-net-mlx5e-Fix-return-value-in-case-of-module-E.patch
 	patches.kernel.org/6.17.8-789-net-ti-icssg-prueth-Fix-fdb-hash-size-configur.patch
 	patches.kernel.org/6.17.8-790-net-mlx5e-SHAMPO-Fix-header-mapping-for-64K-pa.patch
+	patches.kernel.org/6.17.8-791-net-mlx5e-SHAMPO-Fix-skb-size-check-for-64K-pa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
