--- a/series.conf
+++ b/series.conf
@@ -1812,6 +1812,7 @@
 	patches.kernel.org/6.17.8-424-ipv6-Add-sanity-checks-on-ipv6_devconf.rpl_seg.patch
 	patches.kernel.org/6.17.8-425-drm-xe-Extend-Wa_22021007897-to-Xe3-platforms.patch
 	patches.kernel.org/6.17.8-426-wifi-mac80211-count-reg-connection-element-in-.patch
+	patches.kernel.org/6.17.8-427-drm-panthor-check-bo-offset-alignment-in-vm-bi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
