--- a/series.conf
+++ b/series.conf
@@ -1616,6 +1616,7 @@
 	patches.kernel.org/6.17.8-228-drm-xe-ptl-Apply-Wa_16026007364.patch
 	patches.kernel.org/6.17.8-229-drm-xe-configfs-Enforce-canonical-device-names.patch
 	patches.kernel.org/6.17.8-230-drm-amd-display-Update-tiled-to-tiled-copy-com.patch
+	patches.kernel.org/6.17.8-231-drm-amd-display-fix-condition-for-setting-timi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
