--- a/series.conf
+++ b/series.conf
@@ -2167,6 +2167,7 @@
 	patches.kernel.org/6.17.8-779-net-usb-qmi_wwan-initialize-MAC-header-offset-.patch
 	patches.kernel.org/6.17.8-780-bnxt_en-Shutdown-FW-DMA-in-bnxt_shutdown.patch
 	patches.kernel.org/6.17.8-781-bnxt_en-Fix-a-possible-memory-leak-in-bnxt_ptp.patch
+	patches.kernel.org/6.17.8-782-bnxt_en-Fix-null-pointer-dereference-in-bnxt_b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
