NTB: epf: Allow arbitrary BAR mapping (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2096,6 +2096,7 @@
 	patches.kernel.org/6.17.8-708-clk-ti-am33xx-keep-WKUP_DEBUGSS_CLKCTRL-enable.patch
 	patches.kernel.org/6.17.8-709-clk-scmi-Add-duty-cycle-ops-only-when-duty-cyc.patch
 	patches.kernel.org/6.17.8-710-clk-clocking-wizard-Fix-output-clock-register-.patch
+	patches.kernel.org/6.17.8-711-NTB-epf-Allow-arbitrary-BAR-mapping.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
