mfd: kempld: Switch back to earlier ->init() behavior (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1501,6 +1501,7 @@
 	patches.kernel.org/6.17.8-113-cpuidle-governors-menu-Select-polling-state-in.patch
 	patches.kernel.org/6.17.8-114-PM-hibernate-Combine-return-paths-in-power_dow.patch
 	patches.kernel.org/6.17.8-115-PM-sleep-Allow-pm_restrict_gfp_mask-stacking.patch
+	patches.kernel.org/6.17.8-116-mfd-kempld-Switch-back-to-earlier-init-behavio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
