soc/tegra: fuse: Add Tegra114 nvmem cells and fuse lookups (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1553,6 +1553,7 @@
 	patches.kernel.org/6.17.8-165-cpufreq-ondemand-Update-the-efficient-idle-che.patch
 	patches.kernel.org/6.17.8-166-arm64-zynqmp-Disable-coresight-by-default.patch
 	patches.kernel.org/6.17.8-167-arm64-zynqmp-Revert-usb-node-drive-strength-an.patch
+	patches.kernel.org/6.17.8-168-soc-tegra-fuse-Add-Tegra114-nvmem-cells-and-fu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
