--- a/series.conf
+++ b/series.conf
@@ -2023,6 +2023,7 @@
 	patches.kernel.org/6.17.8-635-scsi-mpt3sas-Add-support-for-22.5-Gbps-SAS-lin.patch
 	patches.kernel.org/6.17.8-636-accel-habanalabs-return-ENOMEM-if-less-than-re.patch
 	patches.kernel.org/6.17.8-637-accel-habanalabs-gaudi2-read-preboot-status-af.patch
+	patches.kernel.org/6.17.8-638-accel-habanalabs-support-mapping-cb-with-vmall.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
