drm/xe/wcl: Extend L3bank mask workaround (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1747,6 +1747,7 @@
 	patches.kernel.org/6.17.8-359-extcon-axp288-Fix-wakeup-source-leaks-on-devic.patch
 	patches.kernel.org/6.17.8-360-drm-xe-Set-GT-as-wedged-before-sending-wedged-.patch
 	patches.kernel.org/6.17.8-361-remoteproc-wkup_m3-Use-devm_pm_runtime_enable-.patch
+	patches.kernel.org/6.17.8-362-drm-xe-wcl-Extend-L3bank-mask-workaround.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
