usb: mon: Increase BUFF_MAX to 64 MiB to support multi-MB URBs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1963,6 +1963,7 @@
 	patches.kernel.org/6.17.8-575-scsi-lpfc-Define-size-of-debugfs-entry-for-xri.patch
 	patches.kernel.org/6.17.8-576-scsi-lpfc-Ensure-PLOGI_ACC-is-sent-prior-to-PR.patch
 	patches.kernel.org/6.17.8-577-allow-finish_no_open-file-ERR_PTR-E.patch
+	patches.kernel.org/6.17.8-578-usb-mon-Increase-BUFF_MAX-to-64-MiB-to-support.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
