net: bridge: fix MST static key usage (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2182,6 +2182,7 @@
 	patches.kernel.org/6.17.8-794-net-dsa-microchip-Fix-reserved-multicast-addre.patch
 	patches.kernel.org/6.17.8-795-lan966x-Fix-sleeping-in-atomic-context.patch
 	patches.kernel.org/6.17.8-796-net-bridge-fix-use-after-free-due-to-MST-port-.patch
+	patches.kernel.org/6.17.8-797-net-bridge-fix-MST-static-key-usage.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
