--- a/series.conf
+++ b/series.conf
@@ -1461,6 +1461,7 @@
 	patches.kernel.org/6.17.8-073-net-hns3-return-error-code-when-function-fails.patch
 	patches.kernel.org/6.17.8-074-sfc-fix-potential-memory-leak-in-efx_mae_proce.patch
 	patches.kernel.org/6.17.8-075-tools-ynl-avoid-print_field-when-there-is-no-r.patch
+	patches.kernel.org/6.17.8-076-dpll-spec-add-missing-module-name-and-clock-id.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
