--- a/series.conf
+++ b/series.conf
@@ -1493,6 +1493,7 @@
 	patches.kernel.org/6.17.8-105-drm-ast-Clear-preserved-bits-from-register-out.patch
 	patches.kernel.org/6.17.8-106-drm-amd-Check-that-VPE-has-reached-DPM0-in-idl.patch
 	patches.kernel.org/6.17.8-107-drm-amd-display-Fix-incorrect-return-of-vblank.patch
+	patches.kernel.org/6.17.8-108-drm-amd-display-Don-t-program-BLNDGAM_MEM_PWR_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
