--- a/series.conf
+++ b/series.conf
@@ -1731,6 +1731,7 @@
 	patches.kernel.org/6.17.8-343-drm-xe-pcode-Initialize-data0-for-pcode-read-r.patch
 	patches.kernel.org/6.17.8-344-drm-panel-ilitek-ili9881c-turn-off-power-suppl.patch
 	patches.kernel.org/6.17.8-345-drm-panel-ilitek-ili9881c-move-display_on-_off.patch
+	patches.kernel.org/6.17.8-346-rds-Fix-endianness-annotation-for-RDS_MPATH_HA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
