--- a/series.conf
+++ b/series.conf
@@ -1469,6 +1469,7 @@
 	patches.kernel.org/6.17.8-081-drm-amd-pm-fix-smu-table-id-bound-check-issue-.patch
 	patches.kernel.org/6.17.8-082-drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLe.patch
 	patches.kernel.org/6.17.8-083-drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLe.patch
+	patches.kernel.org/6.17.8-084-drm-amdgpu-fix-SPDX-headers-on-amdgpu_cper.c-h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
