ima: don't clear IMA_DIGSIG flag when setting or removing non-IMA xattr (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2063,6 +2063,7 @@
 	patches.kernel.org/6.17.8-675-ksmbd-use-sock_create_kern-interface-to-create.patch
 	patches.kernel.org/6.17.8-676-smb-client-update-cfid-last_access_time-in-ope.patch
 	patches.kernel.org/6.17.8-677-smb-client-transport-avoid-reconnects-triggere.patch
+	patches.kernel.org/6.17.8-678-ima-don-t-clear-IMA_DIGSIG-flag-when-setting-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
