drm/xe/guc: Add devm release action to safely tear down CT (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1797,6 +1797,7 @@
 	patches.kernel.org/6.17.8-409-wifi-iwlwifi-pcie-remember-when-interrupts-are.patch
 	patches.kernel.org/6.17.8-410-drm-st7571-i2c-add-support-for-inverted-pixel-.patch
 	patches.kernel.org/6.17.8-411-ptp-Limit-time-setting-of-PTP-clocks.patch
+	patches.kernel.org/6.17.8-412-drm-xe-guc-Add-devm-release-action-to-safely-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
