selftests: traceroute: Use require_command() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1897,6 +1897,7 @@
 	patches.kernel.org/6.17.8-509-selftests-net-replace-sleeps-in-fcnal-test-wit.patch
 	patches.kernel.org/6.17.8-510-media-redrat3-use-int-type-to-store-negative-e.patch
 	patches.kernel.org/6.17.8-511-platform-x86-amd-pmf-Fix-the-custom-bios-input.patch
+	patches.kernel.org/6.17.8-512-selftests-traceroute-Use-require_command.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
