drm/amdgpu: Respect max pixel clock for HDMI and DVI-D (v2) (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1779,6 +1779,7 @@
 	patches.kernel.org/6.17.8-391-drm-amdgpu-Avoid-jpeg-v5.0.1-poison-irq-call-t.patch
 	patches.kernel.org/6.17.8-392-drm-amd-display-incorrect-conditions-for-faili.patch
 	patches.kernel.org/6.17.8-393-drm-amdgpu-Avoid-vcn-v5.0.1-poison-irq-call-tr.patch
+	patches.kernel.org/6.17.8-394-drm-amdgpu-Respect-max-pixel-clock-for-HDMI-an.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
