--- a/series.conf
+++ b/series.conf
@@ -2227,6 +2227,7 @@
 	patches.kernel.org/6.17.8-839-kbuild-Strip-trailing-padding-bytes-from-modul.patch
 	patches.kernel.org/6.17.8-840-drm-amdgpu-Fix-unintended-error-log-in-VCN5_0_.patch
 	patches.kernel.org/6.17.8-841-drm-amd-display-Fix-vupdate_offload_work-doc.patch
+	patches.kernel.org/6.17.8-842-drm-amdgpu-Fix-function-header-names-in-amdgpu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
