libbpf: Fix powerpc's stack register definition in bpf_tracing.h (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1439,6 +1439,7 @@
 	patches.kernel.org/6.17.8-051-ASoC-Intel-avs-Disable-periods-elapsed-work-wh.patch
 	patches.kernel.org/6.17.8-052-ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
 	patches.kernel.org/6.17.8-053-ASoC-fsl_micfil-correct-the-endian-format-for-.patch
+	patches.kernel.org/6.17.8-054-libbpf-Fix-powerpc-s-stack-register-definition.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
