--- a/series.conf
+++ b/series.conf
@@ -1542,6 +1542,7 @@
 	patches.kernel.org/6.17.8-154-hwmon-k10temp-Add-device-ID-for-Strix-Halo.patch
 	patches.kernel.org/6.17.8-155-hwmon-lenovo-ec-sensors-Update-P8-supprt.patch
 	patches.kernel.org/6.17.8-156-hwmon-sbtsi_temp-AMD-CPU-extended-temperature-.patch
+	patches.kernel.org/6.17.8-157-pinctrl-renesas-rzg2l-Add-suspend-resume-suppo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
