drm/amd/display: Indicate when custom brightness curves are in use (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1844,6 +1844,7 @@
 	patches.kernel.org/6.17.8-456-drm-amd-display-Fix-pbn_div-Calculation-Error.patch
 	patches.kernel.org/6.17.8-457-drm-amd-display-dont-wait-for-pipe-update-duri.patch
 	patches.kernel.org/6.17.8-458-drm-amd-pm-refine-amdgpu-pm-sysfs-node-error-c.patch
+	patches.kernel.org/6.17.8-459-drm-amd-display-Indicate-when-custom-brightnes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
