--- a/series.conf
+++ b/series.conf
@@ -1483,6 +1483,7 @@
 	patches.kernel.org/6.17.8-095-s390-pci-Avoid-deadlock-between-PCI-error-reco.patch
 	patches.kernel.org/6.17.8-096-s390-Disable-ARCH_WANT_OPTIMIZE_HUGETLB_VMEMMA.patch
 	patches.kernel.org/6.17.8-097-s390-mm-Fix-memory-leak-in-add_marker-when-kvr.patch
+	patches.kernel.org/6.17.8-098-drm-xe-Do-not-wake-device-during-a-GT-reset.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
