--- a/series.conf
+++ b/series.conf
@@ -2146,6 +2146,7 @@
 	patches.kernel.org/6.17.8-758-gve-Implement-settime64-with-EOPNOTSUPP.patch
 	patches.kernel.org/6.17.8-759-net-dsa-tag_brcm-legacy-fix-untagged-rx-on-unb.patch
 	patches.kernel.org/6.17.8-760-selftests-net-fix-out-of-order-delivery-of-FIN.patch
+	patches.kernel.org/6.17.8-761-selftests-net-use-destination-options-instead-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
