--- a/series.conf
+++ b/series.conf
@@ -2039,6 +2039,7 @@
 	patches.kernel.org/6.17.8-651-ACPI-scan-Update-honor-list-for-RPMI-System-MS.patch
 	patches.kernel.org/6.17.8-652-platform-x86-x86-android-tablets-Stop-using-EP.patch
 	patches.kernel.org/6.17.8-653-vfio-pci-Fix-INTx-handling-on-legacy-non-PCI-2.patch
+	patches.kernel.org/6.17.8-654-vfio-nvgrace-gpu-Add-GB300-SKU-to-the-devid-ta.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
