jfs: fix uninitialized waitqueue in transaction manager (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1975,6 +1975,7 @@
 	patches.kernel.org/6.17.8-587-IB-ipoib-Ignore-L3-master-device.patch
 	patches.kernel.org/6.17.8-588-bnxt_en-Add-fw-log-trace-support-for-5731X-574.patch
 	patches.kernel.org/6.17.8-589-jfs-Verify-inode-mode-when-loading-from-disk.patch
+	patches.kernel.org/6.17.8-590-jfs-fix-uninitialized-waitqueue-in-transaction.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
