mfd: da9063: Split chip variant reading in two bus transactions (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1608,6 +1608,7 @@
 	patches.kernel.org/6.17.8-220-mfd-qnap-mcu-Handle-errors-returned-from-qnap_.patch
 	patches.kernel.org/6.17.8-221-mfd-qnap-mcu-Include-linux-types.h-in-qnap-mcu.patch
 	patches.kernel.org/6.17.8-222-mfd-madera-Work-around-false-positive-Wininiti.patch
+	patches.kernel.org/6.17.8-223-mfd-da9063-Split-chip-variant-reading-in-two-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
