--- a/series.conf
+++ b/series.conf
@@ -1972,6 +1972,7 @@
 	patches.kernel.org/6.17.8-584-usb-xhci-pci-add-support-for-hosts-with-zero-U.patch
 	patches.kernel.org/6.17.8-585-ipv6-np-rxpmtu-race-annotation.patch
 	patches.kernel.org/6.17.8-586-RDMA-irdma-Update-Kconfig.patch
+	patches.kernel.org/6.17.8-587-IB-ipoib-Ignore-L3-master-device.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
