--- a/series.conf
+++ b/series.conf
@@ -1868,6 +1868,7 @@
 	patches.kernel.org/6.17.8-480-wifi-rtw89-Add-USB-ID-2001-3327-for-D-Link-AX1.patch
 	patches.kernel.org/6.17.8-481-wifi-iwlwifi-fw-Add-ASUS-to-PPAG-and-TAS-list.patch
 	patches.kernel.org/6.17.8-482-drm-xe-i2c-Enable-bus-mastering.patch
+	patches.kernel.org/6.17.8-483-media-ov08x40-Fix-the-horizontal-flip-control.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
