platform/x86/intel-uncore-freq: Present unique domain ID per package (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1823,6 +1823,7 @@
 	patches.kernel.org/6.17.8-435-media-verisilicon-Explicitly-disable-selection.patch
 	patches.kernel.org/6.17.8-436-wifi-mac80211-Fix-6-GHz-Band-capabilities-elem.patch
 	patches.kernel.org/6.17.8-437-platform-x86-think-lmi-Add-extra-TC-BIOS-error.patch
+	patches.kernel.org/6.17.8-438-platform-x86-intel-uncore-freq-Present-unique-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
