--- a/series.conf
+++ b/series.conf
@@ -1870,6 +1870,7 @@
 	patches.kernel.org/6.17.8-482-drm-xe-i2c-Enable-bus-mastering.patch
 	patches.kernel.org/6.17.8-483-media-ov08x40-Fix-the-horizontal-flip-control.patch
 	patches.kernel.org/6.17.8-484-media-i2c-og01a1b-Specify-monochrome-media-bus.patch
+	patches.kernel.org/6.17.8-485-media-qcom-camss-csiphy-3ph-Add-CSIPHY-2ph-DPH.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
