PCI: imx6: Enable the Vaux supply if available (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1825,6 +1825,7 @@
 	patches.kernel.org/6.17.8-437-platform-x86-think-lmi-Add-extra-TC-BIOS-error.patch
 	patches.kernel.org/6.17.8-438-platform-x86-intel-uncore-freq-Present-unique-.patch
 	patches.kernel.org/6.17.8-439-ALSA-usb-audio-apply-quirk-for-MOONDROP-Quark2.patch
+	patches.kernel.org/6.17.8-440-PCI-imx6-Enable-the-Vaux-supply-if-available.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
