--- a/series.conf
+++ b/series.conf
@@ -1600,6 +1600,7 @@
 	patches.kernel.org/6.17.8-212-selftests-bpf-Fix-flaky-bpf_cookie-selftest.patch
 	patches.kernel.org/6.17.8-213-tools-power-turbostat-Fix-incorrect-sorting-of.patch
 	patches.kernel.org/6.17.8-214-tools-power-x86_energy_perf_policy-Fix-incorre.patch
+	patches.kernel.org/6.17.8-215-tools-power-x86_energy_perf_policy-Enhance-HWP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
