--- a/series.conf
+++ b/series.conf
@@ -1557,6 +1557,7 @@
 	patches.kernel.org/6.17.8-169-ARM-tegra-p880-set-correct-touchscreen-clippin.patch
 	patches.kernel.org/6.17.8-170-ARM-tegra-transformer-20-add-missing-magnetome.patch
 	patches.kernel.org/6.17.8-171-ARM-tegra-transformer-20-fix-audio-codec-inter.patch
+	patches.kernel.org/6.17.8-172-firmware-qcom-tzmem-disable-sc7180-platform.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
