media: adv7180: Do not write format to device in set_fmt (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1818,6 +1818,7 @@
 	patches.kernel.org/6.17.8-430-netlink-specs-fou-change-local-v6-peer-v6-chec.patch
 	patches.kernel.org/6.17.8-431-net-nfc-nci-Increase-NCI_DATA_TIMEOUT-to-3000-.patch
 	patches.kernel.org/6.17.8-432-media-adv7180-Add-missing-lock-in-suspend-call.patch
+	patches.kernel.org/6.17.8-433-media-adv7180-Do-not-write-format-to-device-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
