--- a/series.conf
+++ b/series.conf
@@ -1690,6 +1690,7 @@
 	patches.kernel.org/6.17.8-302-scsi-ufs-host-mediatek-Fix-auto-hibern8-timer-.patch
 	patches.kernel.org/6.17.8-303-scsi-ufs-host-mediatek-Fix-PWM-mode-switch-iss.patch
 	patches.kernel.org/6.17.8-304-scsi-ufs-host-mediatek-Assign-power-mode-userd.patch
+	patches.kernel.org/6.17.8-305-scsi-ufs-host-mediatek-Change-reset-sequence-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
