serdev: Drop dev_pm_domain_detach() call (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1850,6 +1850,7 @@
 	patches.kernel.org/6.17.8-462-usb-gadget-f_hid-Fix-zero-length-packet-transf.patch
 	patches.kernel.org/6.17.8-463-usb-cdns3-gadget-Use-after-free-during-failed-.patch
 	patches.kernel.org/6.17.8-464-serial-qcom-geni-Add-DFS-clock-mode-support-to.patch
+	patches.kernel.org/6.17.8-465-serdev-Drop-dev_pm_domain_detach-call.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
