--- a/series.conf
+++ b/series.conf
@@ -1412,6 +1412,7 @@
 	patches.kernel.org/6.17.8-024-s390-pci-Restore-IRQ-unconditionally-for-the-z.patch
 	patches.kernel.org/6.17.8-025-smb-client-fix-potential-cfid-UAF-in-smb2_quer.patch
 	patches.kernel.org/6.17.8-026-x86-build-Disable-SSE4a.patch
+	patches.kernel.org/6.17.8-027-x86-CPU-AMD-Add-RDSEED-fix-for-Zen5.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
