drm/amd/display: Keep PLL0 running on DCE 6.0 and 6.4 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1940,6 +1940,7 @@
 	patches.kernel.org/6.17.8-552-drm-amd-display-fix-dml-ms-order-of-operations.patch
 	patches.kernel.org/6.17.8-553-drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.kernel.org/6.17.8-554-drm-amd-display-Don-t-use-non-registered-VUPDA.patch
+	patches.kernel.org/6.17.8-555-drm-amd-display-Keep-PLL0-running-on-DCE-6.0-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
