drm/amd/display: change dc stream color settings only in atomic commit (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2011,6 +2011,7 @@
 	patches.kernel.org/6.17.8-623-drm-amd-display-Add-fast-sync-field-in-ultra-s.patch
 	patches.kernel.org/6.17.8-624-drm-amd-display-Init-dispclk-from-bootup-clock.patch
 	patches.kernel.org/6.17.8-625-drm-amd-display-Fix-for-test-crash-due-to-powe.patch
+	patches.kernel.org/6.17.8-626-drm-amd-display-change-dc-stream-color-setting.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
