tools/cpupower: fix error return value in cpupower_write_sysfs() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1573,6 +1573,7 @@
 	patches.kernel.org/6.17.8-185-video-backlight-lp855x_bl-Set-correct-EPROM-st.patch
 	patches.kernel.org/6.17.8-186-i3c-dw-Add-shutdown-support-to-dw_i3c_master-d.patch
 	patches.kernel.org/6.17.8-187-io_uring-zcrx-check-all-niovs-filled-with-dma-.patch
+	patches.kernel.org/6.17.8-188-tools-cpupower-fix-error-return-value-in-cpupo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
