riscv: ptdump: use seq_puts() in pt_dump_seq_puts() macro (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2137,6 +2137,7 @@
 	patches.kernel.org/6.17.8-749-net-libwx-fix-device-bus-LAN-ID.patch
 	patches.kernel.org/6.17.8-750-scsi-ufs-core-Fix-a-race-condition-related-to-.patch
 	patches.kernel.org/6.17.8-751-riscv-stacktrace-Disable-KASAN-checks-for-non-.patch
+	patches.kernel.org/6.17.8-752-riscv-ptdump-use-seq_puts-in-pt_dump_seq_puts-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
