fuse: zero initialize inode private data (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1750,6 +1750,7 @@
 	patches.kernel.org/6.17.8-362-drm-xe-wcl-Extend-L3bank-mask-workaround.patch
 	patches.kernel.org/6.17.8-363-net-phy-fixed_phy-let-fixed_phy_unregister-fre.patch
 	patches.kernel.org/6.17.8-364-selftests-drv-net-hds-restore-hds-settings.patch
+	patches.kernel.org/6.17.8-365-fuse-zero-initialize-inode-private-data.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
