--- a/series.conf
+++ b/series.conf
@@ -1440,6 +1440,7 @@
 	patches.kernel.org/6.17.8-052-ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
 	patches.kernel.org/6.17.8-053-ASoC-fsl_micfil-correct-the-endian-format-for-.patch
 	patches.kernel.org/6.17.8-054-libbpf-Fix-powerpc-s-stack-register-definition.patch
+	patches.kernel.org/6.17.8-055-ASoC-mediatek-Fix-double-pm_runtime_disable-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
