--- a/series.conf
+++ b/series.conf
@@ -2066,6 +2066,7 @@
 	patches.kernel.org/6.17.8-678-ima-don-t-clear-IMA_DIGSIG-flag-when-setting-o.patch
 	patches.kernel.org/6.17.8-679-usb-xhci-pci-Fix-USB2-only-root-hub-registrati.patch
 	patches.kernel.org/6.17.8-680-drm-amd-display-Add-fallback-path-for-YCBCR422.patch
+	patches.kernel.org/6.17.8-681-ACPICA-Update-dsmethod.c-to-get-rid-of-unused-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
