dt-bindings: eeprom: at25: use "size" for FRAMs without device ID (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2234,6 +2234,7 @@
 	patches.kernel.org/6.17.8-846-drm-amd-display-use-GFP_NOWAIT-for-allocation-.patch
 	patches.kernel.org/6.17.8-847-drm-amd-display-Fix-black-screen-with-HDMI-out.patch
 	patches.kernel.org/6.17.8-848-selftests-drv-net-Reload-pkt-pointer-after-cal.patch
+	patches.kernel.org/6.17.8-849-dt-bindings-eeprom-at25-use-size-for-FRAMs-wit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
