drm/amd/display: Init dispclk from bootup clock for DCN314 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2009,6 +2009,7 @@
 	patches.kernel.org/6.17.8-621-drm-amd-display-Add-missing-post-flip-calls.patch
 	patches.kernel.org/6.17.8-622-drm-amd-display-Add-AVI-infoframe-copy-in-copy.patch
 	patches.kernel.org/6.17.8-623-drm-amd-display-Add-fast-sync-field-in-ultra-s.patch
+	patches.kernel.org/6.17.8-624-drm-amd-display-Init-dispclk-from-bootup-clock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
