wifi: mac80211: use wiphy_hrtimer_work for ttlm_work (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2189,6 +2189,7 @@
 	patches.kernel.org/6.17.8-801-wifi-cfg80211-add-an-hrtimer-based-delayed-wor.patch
 	patches.kernel.org/6.17.8-802-wifi-mac80211-use-wiphy_hrtimer_work-for-ml_re.patch
 	patches.kernel.org/6.17.8-803-platform-x86-int3472-Fix-double-free-of-GPIO-d.patch
+	patches.kernel.org/6.17.8-804-wifi-mac80211-use-wiphy_hrtimer_work-for-ttlm_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
