--- a/series.conf
+++ b/series.conf
@@ -2138,6 +2138,7 @@
 	patches.kernel.org/6.17.8-750-scsi-ufs-core-Fix-a-race-condition-related-to-.patch
 	patches.kernel.org/6.17.8-751-riscv-stacktrace-Disable-KASAN-checks-for-non-.patch
 	patches.kernel.org/6.17.8-752-riscv-ptdump-use-seq_puts-in-pt_dump_seq_puts-.patch
+	patches.kernel.org/6.17.8-753-Revert-wifi-ath12k-Fix-missing-station-power-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
