smsc911x: add second read of EEPROM mac when possible corruption seen (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1828,6 +1828,7 @@
 	patches.kernel.org/6.17.8-440-PCI-imx6-Enable-the-Vaux-supply-if-available.patch
 	patches.kernel.org/6.17.8-441-drm-xe-guc-Set-upper-limit-of-H2G-retries-over.patch
 	patches.kernel.org/6.17.8-442-net-call-cond_resched-less-often-in-__release_.patch
+	patches.kernel.org/6.17.8-443-smsc911x-add-second-read-of-EEPROM-mac-when-po.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
