amd/amdkfd: enhance kfd process check in switch partition (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2034,6 +2034,7 @@
 	patches.kernel.org/6.17.8-646-drm-amdgpu-Add-fallback-to-pipe-reset-if-KCQ-r.patch
 	patches.kernel.org/6.17.8-647-drm-amdgpu-Fix-fence-signaling-race-condition-.patch
 	patches.kernel.org/6.17.8-648-ASoC-stm32-sai-manage-context-in-set_sysclk-ca.patch
+	patches.kernel.org/6.17.8-649-amd-amdkfd-enhance-kfd-process-check-in-switch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
