smb: client: update cfid->last_access_time in open_cached_dir_by_dentry() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2061,6 +2061,7 @@
 	patches.kernel.org/6.17.8-673-ftrace-Fix-softlockup-in-ftrace_module_enable.patch
 	patches.kernel.org/6.17.8-674-net-mlx5e-Prevent-entering-switchdev-mode-with.patch
 	patches.kernel.org/6.17.8-675-ksmbd-use-sock_create_kern-interface-to-create.patch
+	patches.kernel.org/6.17.8-676-smb-client-update-cfid-last_access_time-in-ope.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
