--- a/series.conf
+++ b/series.conf
@@ -1964,6 +1964,7 @@
 	patches.kernel.org/6.17.8-576-scsi-lpfc-Ensure-PLOGI_ACC-is-sent-prior-to-PR.patch
 	patches.kernel.org/6.17.8-577-allow-finish_no_open-file-ERR_PTR-E.patch
 	patches.kernel.org/6.17.8-578-usb-mon-Increase-BUFF_MAX-to-64-MiB-to-support.patch
+	patches.kernel.org/6.17.8-579-usb-xhci-plat-Facilitate-using-autosuspend-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
