Bluetooth: btintel_pcie: Define hdev->wakeup() callback (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2045,6 +2045,7 @@
 	patches.kernel.org/6.17.8-657-Bluetooth-btintel-Add-support-for-BlazarIW-cor.patch
 	patches.kernel.org/6.17.8-658-net-macb-avoid-dealing-with-endianness-in-macb.patch
 	patches.kernel.org/6.17.8-659-Bluetooth-btusb-Add-new-VID-PID-13d3-3627-for-.patch
+	patches.kernel.org/6.17.8-660-Bluetooth-btintel_pcie-Define-hdev-wakeup-call.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
