scsi: mpi3mr: Fix I/O failures during controller reset (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1739,6 +1739,7 @@
 	patches.kernel.org/6.17.8-351-net-ipv4-allow-directed-broadcast-routes-to-us.patch
 	patches.kernel.org/6.17.8-352-scsi-mpi3mr-Fix-device-loss-during-enclosure-r.patch
 	patches.kernel.org/6.17.8-353-wifi-rtw89-coex-Limit-Wi-Fi-scan-slot-cost-to-.patch
+	patches.kernel.org/6.17.8-354-scsi-mpi3mr-Fix-I-O-failures-during-controller.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
