--- a/series.conf
+++ b/series.conf
@@ -1826,6 +1826,7 @@
 	patches.kernel.org/6.17.8-438-platform-x86-intel-uncore-freq-Present-unique-.patch
 	patches.kernel.org/6.17.8-439-ALSA-usb-audio-apply-quirk-for-MOONDROP-Quark2.patch
 	patches.kernel.org/6.17.8-440-PCI-imx6-Enable-the-Vaux-supply-if-available.patch
+	patches.kernel.org/6.17.8-441-drm-xe-guc-Set-upper-limit-of-H2G-retries-over.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
