kbuild: align modinfo section for Secureboot Authenticode EDK2 compat (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1476,6 +1476,7 @@
 	patches.kernel.org/6.17.8-088-block-fix-op_is_zone_mgmt-to-handle-REQ_OP_ZON.patch
 	patches.kernel.org/6.17.8-089-block-make-REQ_OP_ZONE_OPEN-a-write-operation.patch
 	patches.kernel.org/6.17.8-090-dma-fence-Fix-safe-access-wrapper-to-call-time.patch
+	patches.kernel.org/6.17.8-091-kbuild-align-modinfo-section-for-Secureboot-Au.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
